Fixing image z-index overlapping with navbar

--- a/style/about.css
+++ b/style/about.css
@@ -30,8 +30,10 @@ body{
     font-weight: 500;
 }
 #aboutPhoto{
-    transform: translateY(25%);
     float: right;
+    transform: translateY(25%);
+    position: relative;
+    z-index: -1;
 }
 .aboutText{
     width: 50%;
@@ -44,6 +46,7 @@ body{
 header{
     position: sticky;
     top: 0;
+    z-index: 1;
     background-color: #121212 !important;
     padding: 0.25rem;
     box-shadow: 0 2px 2px -2px rgba(255, 255, 255, 0.3);
